munit/v/1.2/using-munit-in-anypoint-studio.adoc
= 在Anypoint Studio中使用MUnit
:keywords: mule, esb, tests, qa, quality assurance, verify, functional testing, unit testing, stress testing

MUnit与Anypoint Studio完全集成。您可以使用Studio的图形界面来：

*  <<Creating a New MUnit Test in Studio,Create>>并设计MUnit测试
*  <<Running Your Test,Run>>您的测试
*  <<Viewing Test Results,View>>测试结果和覆盖率
*  <<Debugging Tests,Debug>>您的测试

==  MUnit文件夹

使用MUnit会自动为您的项目添加一个新文件夹`src/test/munit`。

image:munit-folder.png[munit文件夹]

== 在Studio中创建新的MUnit测试

MUnit Studio集成主要是围绕基于XML的测试构建的。大多数MUnit-Studio集成工具可指导您创建这些测试。

在Studio中创建新的MUnit测试有两种基本方法：

* 右键单击某个特定流，然后右键单击流并选择*MUnit*。
* 使用向导，该向导允许您为工作区中的任何流或应用程序创建测试。

最基本的是通过右键单击要测试的流程或使用向导。

=== 为特定流创建测试

要为特定流创建测试，请右键单击该流，然后选择*MUnit*> *Create a new <flow_name> suite.*

image:right-click-flow.png[右键单击流]

这个动作：

* 创建一个以流程所在的XML文件命名的新测试套件，在这种情况下为`munit2.xml`。 Studio将测试套件显示在原始应用程序选项卡旁边的新选项卡上：

image:tabs.png[标签]

* 将XML文件导入到测试套件
* 创建一个新的MUnit测试

以下是Studio中生成的MUnit测试套件以及为新测试套件自动生成的XML文件：

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:test1-flow-specific.png[test1-flow-specific]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:munit="http://www.mulesoft.org/schema/mule/munit" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:core="http://www.mulesoft.org/schema/mule/core" version="EE-3.7.3" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.mulesoft.org/schema/mule/munit http://www.mulesoft.org/schema/mule/munit/current/mule-munit.xsd
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd">
    <munit:config name="munit" doc:name="MUnit configuration"/>
    <spring:beans>
        <spring:import resource="classpath:munit2.xml"/>
    </spring:beans>
    <munit:test name="munit2-test-suite-munit2FlowTest" description="Test">
        <flow-ref name="munit2Flow" doc:name="Flow-ref to munit2Flow"/>
    </munit:test>
</mule>
----
....
------

要将MUnit消息处理器添加到上面所示的测试中，请在流程参考之后将其从组件面板拖到*Test*区域。

image:test1-flow-specific2.png[TEST1流-specific2]

=== 通过向导创建测试

该向导允许您为Studio工作区中的任何流或应用程序创建测试。

要通过向导创建测试，请转到*File*> *New*> *MUnit Test*。 Studio将显示MUnit测试创建向导，如下所示。

image:wizard.png[巫师]

如您所见，该向导允许您选择工作区中的任何流程和应用程序。

如果您想创建不引用特定流的测试，请点击*Create empty test*复选框。

[TIP]
您还可以通过右键单击Package Explorer窗格中所需的应用程序，然后选择*MUnit*> *Create new suite*，通过向导创建新测试。


[NOTE]
--
自1.2.0版以来，MUnit支持 link:/munit/v/1.2/munit-domain-support[测试基于域的应用程序]。
--

== 配置您的测试

Studio在其自己的画布中显示新创建的测试套件。在这里，您可以使用Studio界面定制您的测试套件，就像常规应用程序一样。 Studio调色板显示两个新部分：*MUnit*和*MUnit Integration Test Tools*。要快速查看所有MUnit消息处理器，请在Palette搜索过滤器中键入`munit`。

image:canvas.png[帆布]

您可以在Studio中编辑套件/测试的运行配置，就像其他任何运行配置一样。运行配置必须至少包含项目和套件;此外，如果您只想运行该测试，则可以指定一个测试。

要在Studio中编辑您的套装或测试的配置，请按以下步骤操作：

. 在包资源管理器中，右键单击套件或测试的.xml文件，然后选择*Properties*。
. 在属性窗口中，点击*Run/Debug Settings*，然后点击*New*。
. 在*Select Configuration Type*窗口中，点击*MUnit*，然后点击*OK*。

配置窗口显示用于编辑配置属性的三个选项卡：*Test*，*Arguments*和*Environment*，如下所示：

image:run-config.png[运行配置]

如果测试名称为空，则运行给定套件中的所有测试。

=== 添加JVM参数

要添加JVM参数，请点击*Arguments*标签，然后在*VM arguments*输入字段中输入您的参数。在下面的图片中，`java.library.path`被添加为参数。

image:run-config-args.png[运行配置-ARGS]

警告：如果您的路径包含空格后加破折号，则破折号后面的任何内容都会被解析为新的JVM参数。例如，如果路径是`-Djava.library.path=/path/to/my -library`，则`-library`会被解析为新的JVM参数，并且运行配置无法按预期工作。要在路径中包含空格，请使用转义字符，例如`%20`：`/path/to/my%20-library`。

=== 环境变量

最后，你也可以定义环境变量。您可以创建自己的变量并使用现有变量，例如`HOME`。

image:run-config-env.png[运行配置-ENV]

环境变量覆盖在`mule­-app.properties`文件中设置的任何属性，或者使用属性占位符。

在MUnit中，您可以从`mule­-app.properties`文件加载属性，也可以使用`context:property-placeholder`从其他文件加载属性。

== 运行您的测试

=== 运行测试套件

要运行测试套件，请右键单击套件所在的空白画布，然后选择*Run MUnit suite*。

image::using-munit-in-anypoint-studio-9c699.png[]

Studio在控制台中显示运行套件的输出。

=== 运行测试

要运行测试，请右键单击测试的名称，然后选择*Run MUnit Test*。

image::using-munit-in-anypoint-studio-7efe5.png[]

要检查测试是否实际运行，请在控制台中查看输出。为了不淹没用户，默认输出提供的信息很少，但足以验证测试是否已经运行。

image:output.png[图片]

此外，您可以选择禁用或启用MUnit套件中的所有测试

image::using-munit-in-anypoint-studio-c1a8c.png[]

运行测试的另一种方法是使用MUnit选项卡（见下文）。

. 在MUnit选项卡中选择所需的测试。
. 右键单击测试，然后选择*Run*。

image:run2.png[RUN2]

提示：如果测试失败，您可以选择按钮*run failed*。这只会运行失败的测试。

=== 在文件夹内运行所有测试

要在_Package Explorer_中的特定文件夹内运行所有测试，请找到该文件夹​​，右键单击该文件夹并选择*Run As*和*MUnit*。

image::using-munit-in-anypoint-studio-f8fab.png[]

位于该文件夹中的两个测试运行：

image::using-munit-in-anypoint-studio-49649.png[]

== 查看测试结果

Studio在左侧资源管理器窗格的*MUnit*选项卡中显示MUnit测试结果，如下所示：

image:whole-canvas.png[全帆布]

[NOTE]
视图的布局可能会根据您的视角配置而变化。以上图片仅供参考。

MUnit选项卡以绿色显示成功测试，红色测试失败。

如果运行多个测试，MUnit选项卡将显示运行测试的历史记录。对于失败的测试，*Errors*按钮显示堆栈跟踪，您可以将其复制到剪贴板。要复制堆栈跟踪，请右键单击失败测试的名称，然后选择*Copy Stack Trace*。

image:copy-stac.png[复制STAC]

正如您在上图中看到的那样，您还可以通过选择适当的菜单选项，使用MUnit选项卡<<Running Your Test>>或调试您的测试。

注意_MUnit tab_右上角的图标：

. 单击*re-run*按钮以执行在上一次运行中运行的所有测试
. 单击*re-debug*按钮以调试在上一次运行中调试过的所有测试
. 单击*re-run failed*按钮仅重新运行前一次运行失败的测试
. 单击*re-debug failed*按钮以调试上一次运行中失败的所有测试

=== 查看覆盖率报告

您可以在Studio中运行 link:/munit/v/1.2/munit-coverage-report[覆盖率报告]。

上图中的*Coverage*按钮允许您查看哪些流程以及测试覆盖了那些流程中的消息处理器的百分比：

image::using-munit-in-anypoint-studio-b3762.png[]

_Overall coverage_值表示已由MUnit测试执行的Mule应用程序消息处理器的百分比。

您可以单击*Generate Report*按钮来获取报告，详细说明MUnit测试中包含的Mule配置文件包含的流和消息处理器。

image::using-munit-in-anypoint-studio-acd3b.png[]

[%header,cols="20a,80a"]
|===
| {列{1}}说明
|资源   |  Mule配置文件的名称。
|流量 |  Mule配置字段内的流量数量。
|权重 | 该字段表示您的应用程序包含在配置文件中的多少。 +
它按文档中消息处理器总数和Mule配置文件中包含的消息处理器数量的百分比计算。
|覆盖范围 | 该字段表示Mule配置文件内的消息处理器在MUnit测试中执行的百分比。
|===


此外，您可以单击每个_Resource_，以获取在该资源中执行的消息处理器的更具体和详细的​​报告：

image::using-munit-in-anypoint-studio-1e4ee.png[]

==== 禁用覆盖报告

如果您选择这样做，则可以禁用项目运行配置中的覆盖率报告生成。

右键点击您的套件资源管理器，然后选择*Run As*和*Run Configurations...*，选择您的munit xml文件以访问套件的配置，并取消选择覆盖率设置下的"Run coverage"选项。

image::using-munit-in-anypoint-studio-2cd78.png[]

== 调试测试

您可以使用Studio的调试透视图调试MUnit测试，就像Studio应用程序一样（有关调试UI的详细信息，请参阅 link:/anypoint-studio/v/5/studio-visual-debugger[Studio可视化调试器]）。

要访问调试视角，请点击Studio工具栏右上角的*Mule Debug*。这将使您远离默认的Mule Design透视图到调试透视图，该透视图将显示调试控件。

与Mule应用程序一样，您可以将MUnit消息处理器标记为断点，其中应停止调试运行以使您能够看到到达消息处理器的信息。

image:breakp.png[breakp]

要调试测试，您可以：

* 右键单击画布上的测试，然后选择*Debug MUnit test*：

* 如果您在MUnit选项卡中工作，则可以选择先前运行的测试，然后单击右上方的调试图标：

image:debug2.png[DEBUG2]

提示：如果测试失败，您可以选择按钮重新调试失败。这仅调试失败的测试。

* 或右键单击所需的测试，然后选择*Debug*：

image:debug3.png[debug3]

[TIP]
--
MUnit与Studio 5.4.0及更高版本捆绑在一起。如果您正在运行较旧的Studio版本，则首先需要安装MUnit。

转到`Help` / `Install New Software...`，然后点击`Add...`按钮。 +
将*Name:*字段设置为`MUnit Update Site`，将*Location:*字段设置为`http://studio.mulesoft.org/beta/r5/munit`

检查*Munit*和*Munit Tools for Mule*，然后点击*Next*完成安装。

安装完成后，重新启动Studio。
--

